--- a/localisation/english/MD_focus_GER_l_english.yml
+++ b/localisation/english/MD_focus_GER_l_english.yml
@@ -2489,6 +2489,89 @@
  GER_bureaucracy_cost_multiplier_modifier_tt: "Modifies §YAdministration Cost§! for §HBundeswehr§! by [?GER_bureaucracy_cost_multiplier_modifier_change|-%] (Current: [?GER_bureaucracy_cost_multiplier_modifier|Y%])"
  GER_military_factories_productivity_tt: "Modifies §YMilitary Factories Productivity§! for §HBundeswehr§! by [?GER_military_factories_productivity_change|-%] (Current: [?GER_military_factories_productivity|Y%])"
  GER_dockyard_productivity_tt: "Modifies §YDockyard Productivity§! for §HBundeswehr§! by [?GER_dockyard_productivity_change|-%] (Current: [?GER_dockyard_productivity|Y%])"
+ GER_attrition_modifier_TT: "Modifies §YAttrition§! for §HBundeswehr§! by [?GER_attrition_modifier_change|+%] (Current: [?GER_attrition_modifier|Y%])"
+ max_planning_factor_tt: "Modifies §YPlaning§! for §HBundeswehr§! by [?GER_max_planning_factor_change|+%] (Current: [?GER_max_planning_factor|Y%])"
+ GER_army_night_attack_tt: "Modifies §YArmy Night Attack§! for §HBundeswehr§! by [?GER_army_night_attack_change|+%] (Current: [?GER_army_night_attack|Y%])"
+ GER_special_forces_training_time_factor_TT: "Modifies §YSpecial Forces Training§! for §HBundeswehr§! by [?GER_special_forces_training_time_factor_change|+%] (Current: [?GER_special_forces_training_time_factor|Y%])"
+ GER_army_core_defence_factor_tt: "Modifies §YArmy core defence§! for §HBundeswehr§! by [?GER_army_core_defence_factor_change|+%] (Current: [?GER_army_core_defence_factor|Y%])"
+ GER_special_forces_out_of_supply_factor_tt: "Modifies §Yspecial Forces out of supply endurance§! for §HBundeswehr§! by [?GER_special_forces_out_of_supply_factor_change|+%] (Current: [?GER_special_forces_out_of_supply_factor|Y%])"
+ GER_winter_attrition_factor_tt: "Modifies §Ywinter attrition§! for §HBundeswehr§! by [?GER_winter_attrition_factor_change|+%] (Current: [?GER_winter_attrition_factor|Y%])"
+ GER_army_attack_speed_factor_tt: "Modifies §YArmy_attack Speed§! for §HBundeswehr§! by [?GER_army_attack_speed_factor_change|+%] (Current: [?GER_army_attack_speed_factor|Y%])"
+ GER_special_forces_attack_factor_tt: "Modifies §Yspecial Forces attack§! for §HBundeswehr§! by [?GER_special_forces_attack_factor_change|+%] (Current: [?GER_special_forces_attack_factor|Y%])"
+ GER_initiative_factor_tt: "Modifies §Yinitiative§! for §HBundeswehr§! by [?GER_initiative_factor_change|+%] (Current: [?GER_initiative_factor|Y%])"
+ GER_army_armor_attack_factor_tt: "Modifies §YArmor Attack§! for §HBundeswehr§! by [?GER_army_armor_attack_factor_change|+%] (Current: [?GER_army_armor_attack_factor|Y%])"
+ GER_army_armor_defence_factor_tt: "Modifies §YArmor Defence§! for §HBundeswehr§! by [?GER_army_armor_defence_factor_change|+%] (Current: [?GER_army_armor_defence_factor|Y%])"
+ GER_army_armor_speed_factor_tt: "Modifies §YArmor Speed§! for §HBundeswehr§! by [?GER_army_armor_speed_factor_change|+%] (Current: [?GER_army_armor_speed_factor|Y%])"
+ GER_intel_from_combat_factor_tt: "Modifies §Yintel from combat§! for §HBundeswehr§! by [?GER_intel_from_combat_factor_change|+%] (Current: [?GER_intel_from_combat_factor|Y%])"
+ GER_max_planning_modifier_TT: "Modifies §YMax Planing§! for §HBundeswehr§! by [?GER_max_planning_modifier_change|+%] (Current: [?GER_max_planning_modifier|Y%])"
+ GER_military_industrial_organization_research_bonus_tt: "Modifies §YMilitary Industrial Organization Research§! for §HBundeswehr§! by [?GER_military_industrial_organization_research_bonus_change|+%] (Current: [?GER_military_industrial_organization_research_bonus|Y%])"
+ GER_intercept_efficiency_tt: "Modifies §YIntercept efficiency§! for §HBundeswehr§! by [?GER_intercept_efficiency_change|+%] (Current: [?GER_intercept_efficiency|Y%])"
+ GER_cas_efficiency_tt: "Modifies §YCAS efficiency§! for §HBundeswehr§! by [?GER_cas_efficiency_change|+%] (Current: [?GER_cas_efficiency|Y%])"
+ GER_naval_strike_targetting_tt: "Modifies §YNaval strike targetting§! for §HBundeswehr§! by [?GER_naval_strike_targetting_change|+%] (Current: [?GER_naval_strike_targetting|Y%])"
+ GER_air_accidents_tt: "Modifies §YAir accidents§! for §HBundeswehr§! by [?GER_air_accidents_change|+%] (Current: [?GER_air_accidents|Y%])"
+ GER_ground_attack_tt: "Modifies §YGround attack§! for §HBundeswehr§! by [?GER_ground_attack_change|+%] (Current: [?GER_ground_attack|Y%])"
+ GER_air_night_penalty_tt: "Modifies §YAir Nightmission effeciencys§! for §HBundeswehr§! by [?GER_air_night_penalty_change|+%] (Current: [?GER_air_night_penalty|Y%])"
+ GER_air_weather_penalty_tt: "Modifies §YBad Weather effeciency§! for §HBundeswehr§! by [?GER_air_weather_penalty_change|+%] (Current: [?GER_air_weather_penalty|Y%])"
+ GER_intel_from_combat_factor_tt: "Modifies §YIntel from Combat§! for §HBundeswehr§! by [?GER_intel_from_combat_factor_change|+%] (Current: [?GER_intel_from_combat_factor|Y%])"
+ GER_naval_speed_factor_tt: "Modifies §YNaval speed§! for §HBundeswehr§! by [?GER_naval_speed_factor_change|+%] (Current: [?GER_naval_speed_factor|Y%])"
+ GER_naval_damage_factor_tt: "Modifies §YNaval damage§! for §HBundeswehr§! by [?GER_naval_damage_factor_change|+%] (Current: [?GER_naval_damage_factor|Y%])"
+ GER_naval_defense_factor_tt: "Modifies §YNaval defense§! for §HBundeswehr§! by [?GER_naval_defense_factor_change|+%] (Current: [?GER_naval_defense_factor|Y%])"
+ GER_navy_anti_air_attack_factor_tt: "Modifies §YNavy anti air attack§! for §HBundeswehr§! by [?GER_navy_anti_air_attack_factor_change|+%] (Current: [?GER_navy_anti_air_attack_factor|Y%])"
+ GER_naval_coordination_tt: "Modifies §YNaval Coordination§! for §HBundeswehr§! by [?GER_naval_coordination_change|+%] (Current: [?GER_naval_coordination|Y%])"
+ GER_naval_detection_tt: "Modifies §YNaval detection§! for §HBundeswehr§! by [?GER_naval_detection_change|+%] (Current: [?GER_naval_detection|Y%])"
+ GER_navy_org_factor_tt: "Modifies §YNavy organisation§! for §HBundeswehr§! by [?GER_navy_org_factor_change|+%] (Current: [?GER_navy_org_factor|Y%])"
+ GER_army_leader_start_level_tt: "Modifies §YGenerals Starting Level§! for §HBundeswehr§! by [?GER_army_leader_start_level_change|+%] (Current: [?GER_army_leader_start_level|Y%])"
+ GER_army_leader_start_attack_level_tt: "Modifies §YGenerals Starting Attack Level§! for §HBundeswehr§! by [?GER_army_leader_start_attack_level_change|+%] (Current: [?GER_army_leader_start_attack_level|Y%])"
+ GER_army_leader_start_defence_level_tt: "Modifies §YGenerals Starting Defence Level§! for §HBundeswehr§! by [?GER_army_leader_start_defence_level_change|+%] (Current: [?GER_army_leader_start_defence_level|Y%])"
+ GER_army_leader_start_logistics_level_tt: "Modifies §YGenerals Starting logistics Level§! for §HBundeswehr§! by [?GER_army_leader_start_logistics_level_change|+%] (Current: [?GER_army_leader_start_logistics_level|Y%])"
+ GER_army_leader_start_planning_level_tt: "Modifies §YGenerals Starting planning Level§! for §HBundeswehr§! by [?GER_army_leader_start_planning_level_change|+%] (Current: [?army_leader_start_planning_level|Y%])"
+ GER_navy_leader_start_level_tt: "Modifies §YAdmirals Starting Level§! for §HBundeswehr§! by [?GER_navy_leader_start_level_change|+%] (Current: [?GER_navy_leader_start_level|Y%])"
+ GER_navy_leader_start_attack_level_tt: "Modifies §YAdmirals Starting Attack Level§! for §HBundeswehr§! by [?GER_navy_leader_start_level_change|+%] (Current: [?GER_navy_leader_start_attack_level|Y%])"
+ GER_navy_leader_start_defence_level_tt: "Modifies §YAdmirals Starting Defence Level§! for §HBundeswehr§! by [?GER_navy_leader_start_defence_level_change|+%] (Current: [?GER_navy_leader_start_defence_level|Y%])"
+ GER_navy_leader_start_maneuvering_level_tt: "Modifies §YAdmirals Starting maneuvering Level§! for §HBundeswehr§! by [?GER_navy_leader_start_maneuvering_level_change|+%] (Current: [?GER_navy_leader_start_maneuvering_level|Y%])"
+ GER_navy_leader_start_coordination_level_tt: "Modifies §YAdmirals Starting coordination Level§! for §HBundeswehr§! by [?GER_navy_leader_start_coordination_level_change|+%] (Current: [?navy_leader_start_coordination_level|Y%])"
+ GER_spotting_chance_tt: "Modifies §YNavy spotting chance§! for §HBundeswehr§! by [?GER_spotting_chance_change|+%] (Current: [?GER_spotting_chance|Y%])"
+ GER_naval_accidents_chance_tt: "Modifies §YNaval accident chance§! for §HBundeswehr§! by [?GER_naval_accidents_chance_change|+%] (Current: [?GER_naval_accidents_chance|Y%])"
+ GER_acclimatization_hot_climate_gain_factor_tt: "Modifies §YHot acclimatisation§! for §HBundeswehr§! by [?GER_acclimatization_hot_climate_gain_factor_change|+%] (Current: [?GER_acclimatization_hot_climate_gain_factor|Y%])"
+ GER_acclimatization_cold_climate_gain_factor_tt: "Modifies §Ycold acclimatisation§! for §HBundeswehr§! by [?GER_acclimatization_cold_climate_gain_factor_change|+%] (Current: [?GER_acclimatization_hot_climate_gain_factor|Y%])"
+ GER_air_training_xp_gain_factor_tt: "Modifies §YAir Training XP§! for §HBundeswehr§! by [?GER_air_training_xp_gain_factor_change|+%] (Current: [?GER_air_training_xp_gain_factor|Y%])"
+ GER_air_ace_generator_chance_factor_tt: "Modifies §YAce Generate Chance§! for §HBundeswehr§! by [?GER_air_ace_generator_chance_factor_change|+%] (Current: [?GER_air_ace_generator_chance_factor|Y%])"
+ GER_army_infantry_attack_factor_tt: "Modifies §YInfantery attack§! for §HBundeswehr§! by [?GER_army_infantry_attack_factor_change|+%] (Current: [?GER_army_infantry_attack_factor|Y%])"
+ GER_army_infantry_defence_factor_tt: "Modifies §YInfantery defese§! for §HBundeswehr§! by [?GER_army_infantry_defence_factor_change|+%] (Current: [?GER_army_infantry_defence_factor|Y%])"
+ GER_mechanized_attack_factor_tt: "Modifies §Ymechanized attack§! for §HBundeswehr§! by [?GER_mechanized_attack_factor_change|+%] (Current: [?GER_mechanized_attack_factor|Y%])"
+ GER_mechanized_defence_factor_tt: "Modifies §YMechanized Defense§! for §HBundeswehr§! by [?GER_mechanized_defence_factor_change|+%] (Current: [?GER_mechanized_defence_factor|Y%])"
+ GER_modifier_army_sub_unit_L_Air_assault_Bat_attack_factor_tt: "Modifies §YLight Air Assault attack§! for §HBundeswehr§! by [?GER_modifier_army_sub_unit_L_Air_assault_Bat_attack_factor_change|+%] (Current: [?GER_modifier_army_sub_unit_L_Air_assault_Bat_attack_factor|Y%])"
+ GER_modifier_army_sub_unit_L_Air_assault_Bat_defence_factor_tt: "Modifies §YLight Air Assault Defence§! for §HBundeswehr§! by [?GER_modifier_army_sub_unit_L_Air_assault_Bat_defence_factor_change|+%] (Current: [?GER_modifier_army_sub_unit_L_Air_assault_Bat_defence_factor|Y%])"
+ GER_modifier_army_sub_unit_Arm_Air_assault_Bat_attack_factor_tt: "Modifies §YArm Air Assault Attack§! for §HBundeswehr§! by [?GER_modifier_army_sub_unit_Arm_Air_assault_Bat_attack_factor_change|+%] (Current: [?GER_modifier_army_sub_unit_Arm_Air_assault_Bat_attack_factor|Y%])"
+ GER_modifier_army_sub_unit_Arm_Air_assault_Bat_defence_factor_chance_tt: "Modifies §YArm Air Assault Defence§! for §HBundeswehr§! by [?GER_modifier_army_sub_unit_Arm_Air_assault_Bat_defence_factor_change|+%] (Current: [?GER_modifier_army_sub_unit_Arm_Air_assault_Bat_defence_factor|Y%])"
+ GER_modifier_army_sub_unit_attack_helo_bat_attack_factor_tt: "Modifies §YSttack Heli attack§! for §HBundeswehr§! by [?GER_modifier_army_sub_unit_attack_helo_bat_attack_factor_change|+%] (Current: [?GER_modifier_army_sub_unit_attack_helo_bat_attack_factor|Y%])"
+ GER_modifier_army_sub_unit_attack_helo_bat_defence_factor_tt: "Modifies §YAttack Heli defence§! for §HBundeswehr§! by [?GER_modifier_army_sub_unit_attack_helo_bat_defence_factor_change|+%] (Current: [?GER_modifier_army_sub_unit_attack_helo_bat_defence_factor|Y%])"
+ GER_army_morale_factor_tt: "Modifies §YArmy moral§! for §HBundeswehr§! by [?GER_army_morale_factor_change|+%] (Current: [?GER_army_morale_factor_change|Y%])"
+ GER_army_core_defence_factor_tt: "Modifies §YArmy core defence§! for §HBundeswehr§! by [?GER_army_core_defence_factor|+%] (Current: [?GER_army_core_defence_factor|Y%])"
+ GER_army_core_attack_factor_tt: "Modifies §YArmey core attack§! for §HBundeswehr§! by [?GER_army_core_attack_factor_change|+%] (Current: [?GER_army_core_attack_factor|Y%])"
+ GER_combat_width_factor_tt: "Modifies §Ycombat width§! for §HBundeswehr§! by [?GER_combat_width_factor_change|+%] (Current: [?GER_combat_width_factor|Y%])"
+ GER_recon_factor_while_entrenched_tt: "Modifies §YTrenched Recon§! for §HBundeswehr§! by [?GER_recon_factor_while_entrenched_change|+%] (Current: [?GER_recon_factor_while_entrenched|Y%])"
+ GER_planning_speed_tt: "Modifies §YPlanning time§! for §HBundeswehr§! by [?GER_planning_speed_change|+%] (Current: [?GER_planning_speed|Y%])"
+ GER_supply_factor_tt: "Modifies §Ysupply factor§! for §HBundeswehr§! by [?GER_supply_factor_change|+%] (Current: [?GER_supply_factor|Y%])"
+ GER_no_supply_grace_tt: "Modifies §Yno  supply grace§! for §HBundeswehr§! by [?GER_no_supply_grace_change|+%] (Current: [?GER_no_supply_grace|Y%])"
+ GER_land_reinforce_rate_tt: "Modifies §Yland reinformcement§! for §HBundeswehr§! by [?GER_land_reinforce_rate_change|+%] (Current: [?GER_land_reinforce_rate|Y%])"
+ GER_out_of_supply_factor_tt: "Modifies §Yout of support penelty§! for §HBundeswehr§! by [?GER_out_of_supply_factor_change|+%] (Current: [?GER_out_of_supply_factor|Y%])"
+ GER_send_volunteer_size_tt: "Modifies §Ysend voluteer size§! for §HBundeswehr§! by [?GER_send_volunteer_size_change|+%] (Current: [?GER_send_volunteer_size|Y%])"
+ GER_minimum_training_level_tt: "Modifies §YMinimum training level§! for §HBundeswehr§! by [?GER_minimum_training_level_change|+%] (Current: [?GER_minimum_training_level|Y%])"
+ GER_army_artillery_defence_factor_tt: "Modifies §YArtillery defence§! for §HBundeswehr§! by [?GER_army_artillery_defence_factor_change|+%] (Current: [?GER_army_artillery_defence_factor|Y%])"
+ GER_experience_loss_factor_tt: "Modifies §YExperience Loss§! for §HBundeswehr§! by [?GER_experience_loss_factor_change|+%] (Current: [?GER_experience_loss_factor|Y%])"
+ GER_river_crossing_factor_tt: "Modifies §YRiver crossing§! for §HBundeswehr§! by [?GER_river_crossing_factor_change|+%] (Current: [?GER_river_crossing_factor|Y%])"
+ GER_training_time_factor_tt: "Modifies §YTraining time§! for §HBundeswehr§! by [?GER_training_time_factor_change|+%] (Current: [?GER_training_time_factor|Y%])"
+ GER_supply_consumption_factor_tt: "Modifies §YSupply consumption§! for §HBundeswehr§! by [?GER_supply_consumption_factor_change|+%] (Current: [?GER_supply_consumption_factor|Y%])"
+ GER_dig_in_speed_factor_tt: "Modifies §YEntrenchement speed§! for §HBundeswehr§! by [?GER_dig_in_speed_factor_change|+%] (Current: [?GER_dig_in_speed_factor|Y%])"
+ GER_mobilization_speed_tt: "Modifies §Ymobilisation speed§! for §HBundeswehr§! by [?GER_mobilization_speed_change|+%] (Current: [?GER_mobilization_speed|Y%])"
+ GER_command_abilities_cost_factor_tt: "Modifies §YCommand ability cost§! for §HBundeswehr§! by [?GER_command_abilities_cost_factor_change|+%] (Current: [?GER_command_abilities_cost_factor|Y%])"
+ GER_army_speed_factor_tt: "Modifies §YArmy Speed§! for §HBundeswehr§! by [?GER_army_speed_factor_change|+%] (Current: [?GER_supply_factor|Y%])"
+ GER_army_org_factor_tt: "Modifies §YArmy Organisation§! for §HBundeswehr§! by [?GER_army_org_factor_change|+%] (Current: [?GER_army_org_factor|Y%])"
+ GER_special_forces_cap_tt: "Modifies §YSpecial Forces Cap§! for §HBundeswehr§! by [?GER_special_forces_cap_change|+%] (Current: [?GER_special_forces_cap|Y%])"
+ GER_special_forces_defence_factor_tt: "Modifies §YSpecial Forces Defence§! for §HBundeswehr§! by [?special_forces_defence_factor_change|+%] (Current: [?special_forces_defence_factor|Y%])"
+ GER_modifier_army_sub_unit_Special_Forces_speed_factor_tt: "Modifies §YSpecial Forces Speed§! for §HBundeswehr§! by [?modifier_army_sub_unit_Special_Forces_speed_factor_change|+%] (Current: [?modifier_army_sub_unit_Special_Forces_speed_factor|Y%])"
+ GER_amphibious_invasion_tt: "Modifies §YAmphibious Invasion§! for §HBundeswehr§! by [?amphibious_invasion_change|+%] (Current: [?amphibious_invasion|Y%])"
 
 #deutsche bahn
  GER_Deutsch_Bahn_mod: "Deutsche Bahn Modifier"
