New development idea dynamic modifier

--- a/localisation/english/MD_focus_HKG_l_english.yml
+++ b/localisation/english/MD_focus_HKG_l_english.yml
@@ -303,8 +303,8 @@
  HKG_improve_trade_desc: ""
  HKG_idea_T_PARK: "§5T-PARK§!"
  HKG_idea_T_PARK_desc: ""
- HKG_idea_cyberport: "Cyberport"
- HKG_idea_cyberport_desc: ""
+ HKG_new_develop_idea_dynamic_modifier: "New Development Idea"
+ HKG_new_develop_idea_dynamic_modifier_desc: ""
  HKG_idea_secondary_education_reform: "Secondary Education Reform"
  HKG_idea_secondary_education_reform_desc: "Secondary Education's old 3-2-2-3 system that used to exist in secondary schools will be reformed into the 3-3-4 Scheme which widely used in the US and China Mainland. This reform will not only remove some overlapping and obsolete but also add some more interesting elective subjects."
  HKG_idea_patriotic_education_reform: "Patriotic Education Reform"
@@ -401,6 +401,14 @@
  triads_update_nationalist_drift_TT: "$nationalist_drift$: [?triads_nationalist_drift_var|+]"
  triads_update_corruption_cost_factor_var_TT: "$corruption_cost_factor$: [?triads_corruption_cost_factor_var|+]"
  
+ #New Development Idea
+ NDI_dynamic_modifies_TT: "\nModify §Y$HKG_new_develop_idea_dynamic_modifier$§! by"
+ NDI_update_consumer_goods_factor_var_TT: "$MODIFIER_CONSUMER_GOODS_FACTOR$ [?NDI_update_consumer_goods_factor_var|Y%]"
+ NDI_update_research_speed_factor_var_TT: "$MODIFIER_RESEARCH_SPEED_FACTOR$ [?NDI_update_research_speed_factor_var|-%]"
+ NDI_update_education_cost_multiplier_modifier_TT: "$education_cost_multiplier_modifier$ [?NDI_update_education_cost_multiplier_modifier|-%]"
+ NDI_update_offices_productivity_TT: "$offices_productivity$ [?NDI_update_offices_productivity|+%]"
+ NDI_update_offices_worker_requirement_modifier_TT: "$offices_worker_requirement_modifier$ [?NDI_update_offices_worker_requirement_modifier|-%]"
+
  HKG_triad_evidance: "Triad's Criminal Evidence"
  HKG_triad_strength: "Triad's Strength"
  HKG_modify_triad_evidance_tt: "§YTriad's Criminal Evidence§! changes by [?HKG_modify_triad_evidance|+0] (Current: [?HKG.HKG_triad_evidance|Y0])\n"
