--- a/localisation/english/MD_focus_TIM_l_english.yml
+++ b/localisation/english/MD_focus_TIM_l_english.yml
@@ -5,7 +5,7 @@ l_english:
  Timor_news.1.desc: "It is official. The U.N's approval of East Timor's constitution has finally been inacted, and Timor-Leste is officially a sovereign and independent nation as well as a full member state of the United Nations. After decades of struggle and drama with the Indonesian administration and armed forces, two parties came to an agreement, and peace was established."
  Timor_news.1.o1: "Let us hope for good future relations"
  Timor.26.t: "Indonesia Approves of UN Set East Timor Election Date"
- Timor.26.d: "After looking at the UN charter for East Timorese democracy, Indonesia sent them off with their blessing, and East Timor is set to become fully independent on May 20."
+ Timor.26.desc: "After looking at the UN charter for East Timorese democracy, Indonesia sent them off with their blessing, and East Timor is set to become fully independent on May 20."
  Timor.26.o1: "Onward to democracy"
  Timor.27.t: "The First East Timorese Presidential Election!"
  Timor.27.d1: "We are free! Now to legitimise our new government, we must choose a leader. Xanana Gusmão has been instrumental in the revolutionary efforts, having served in the administration of East Timor during its short history of freedom in 1975 and fought Indonesisa as the head of the Falintil, the armed wing of Fretilin. He was captured later and imprisoned in Jakarta where he also met Francisco Xavier do Amaral, who was president of East Timor during the freedom period. Amaral is also a national hero, as he endured much suffering as a result of his attempts to secure independence for East Timor, he even coordinated independence movements during capture, with Gusmão of course. Who is the better choice is unclear, while many seem to be throwing their support behind Gusmão, very few would object to Amaral's return."
@@ -65,3 +65,5 @@ l_english:
  TIM_Independence_war: "The War For Independence"
  TIM_war_for_freedom: "Hold Off Indonesia"
  TIM_war_for_freedom_desc: "After §Y4 months§!, the §Yinternational community§! will be fully aware of the abominable activities of [IND.GetFlag] §RIndonesia's§! §YTNI§! and finally cause them to fold under the pressure."
+ #misc
+ USA_intervened_in_timor_crisis: "United States Intervenes In The Conflict In East Timor"
