--- a/localisation/english/MD_focus_ARM_l_english.yml
+++ b/localisation/english/MD_focus_ARM_l_english.yml
@@ -2157,8 +2157,8 @@
  ARM_idea_eacu_cooperation_desc: "The Eurasian Customs Union (originally the Eurasian Economic Community), promotes economic ties between most of the post-Soviet states. The union imposes a common external tariff on all goods entering the union, and act as one singular entity when producing trade deals and negotiations."
  ARM_idea_eacu_cooperation_2: "EACU Integrated Cooperation"
  ARM_idea_eacu_cooperation_2_desc: "The Eurasian Customs Union (originally the Eurasian Economic Community), promotes economic ties between most of the post-Soviet states. The union imposes a common external tariff on all goods entering the union, and act as one singular entity when producing trade deals and negotiations."
- ARM_inner_network_idea: "Inner Network"
- ARM_inner_network_idea_desc: "The inner network of agents and informants is securing state interests."
+ ARM_internal_network_idea: "Internal Network"
+ ARM_internal_network_idea_desc: "The internal network of agents and informants is securing state interests."
  ARM_idea_pro_farmers: "Pro-Farmers"
  ARM_idea_pro_farmers_desc: "As we are slowly moving from a more agrarian society it is still important to be pro-Farmer."
  ARM_idea_agrotech: "AgroTech"
