--- a/localisation/english/MD_focus_POL_l_english.yml
+++ b/localisation/english/MD_focus_POL_l_english.yml
@@ -480,8 +480,8 @@
  POL_ally_research: "Ally Research"
  POL_ally_research_desc: "We need to unite our efforts in science fields, this will surely speed up a process."
 
- POL_economical_comitee: "Economical Committee"
- POL_economical_comitee_desc: "We need to review our situation and take measures to regulate economy to make sure it works to serve the nation, not the globalists."
+ POL_economic_comitee: "Economic Committee"
+ POL_economic_comitee_desc: "We need to review our situation and take measures to regulate economy to make sure it works to serve the nation, not the globalists."
 
  POL_mass_nationalization: "Mass Nationalization"
  POL_mass_nationalization_desc: "We need to nationalize all big corporations and plants to ensure they work to serve the state."
@@ -525,8 +525,8 @@
  POL_promote_egalatarianism: "Promote Egalitarianism"
  POL_promote_egalatarianism_desc: "If you are member of our society you should know what it is to share for the greater good."
 
- POL_create_inner_network: "Create Inner Network"
- POL_create_inner_network_desc: "A network of agents and informants will secure our position and help to stabilize society."
+ POL_create_internal_network: "Create Internal Network"
+ POL_create_internal_network_desc: "A network of agents and informants will secure our position and help to stabilize society."
 
  POL_mandatory_patriotic_education: "Mandatory Patriotic Education"
  POL_mandatory_patriotic_education_desc: "Patriotic education should be a part of school education. We shall teach young folks on our glorious history."
@@ -2875,10 +2875,10 @@
  POL_political_violence_desc: "Political violence has escalated and normal way of life is but a memory."
  POL_reformed_ministry: "Reformed Foreign Affairs Ministry"
  POL_reformed_ministry_desc: "Ministry of foreign affairs has been rerouted to serve national interests."
- POL_economical_comitee_idea: "Economical Comitee"
- POL_economical_comitee_idea_desc: "The Economical Comitee oversees nationalization of industry and regulates market."
- POL_inner_network_idea: "Inner Network"
- POL_inner_network_idea_desc: "The inner network of agents and informants is securing state interests."
+ POL_economic_comitee_idea: "Economic Comitee"
+ POL_economic_comitee_idea_desc: "The Economic Comitee oversees nationalization of industry and regulates market."
+ POL_internal_network_idea: "Internal Network"
+ POL_internal_network_idea_desc: "The internal network of agents and informants is securing state interests."
  POL_paramilitary_organization_idea: "Paramilitary Groups"
  POL_paramilitary_organization_idea_desc: "Various paramilitary grops help to bolster the ranks of the army if necessary."
  POL_military_youth: "Youth Legion"
