--- a/localisation/english/MD_focus_POL_l_english.yml
+++ b/localisation/english/MD_focus_POL_l_english.yml
@@ -480,8 +480,8 @@
  POL_ally_research: "Ally Research"
  POL_ally_research_desc: "We need to unite our efforts in science fields, this will surely speed up a process."
 
- POL_economic_comitee: "Economic Committee"
- POL_economic_comitee_desc: "We need to review our situation and take measures to regulate economy to make sure it works to serve the nation, not the globalists."
+ POL_economic_committee: "Economic Committee"
+ POL_economic_committee_desc: "We need to review our situation and take measures to regulate economy to make sure it works to serve the nation, not the globalists."
 
  POL_mass_nationalization: "Mass Nationalization"
  POL_mass_nationalization_desc: "We need to nationalize all big corporations and plants to ensure they work to serve the state."
@@ -513,8 +513,8 @@
  POL_develop_metals: "Develop Metal Industry"
  POL_develop_metals_desc: "Metal industry is a tradition for some areas of our country. We shall not abandon them, instead we might actually find mines expansion very handy."
 
- POL_social_comitee: "Social Committee"
- POL_social_comitee_desc: "Social life of some individuals has to be regulated, we need to save our nation from degenerative agenda of the West."
+ POL_social_committee: "Social Committee"
+ POL_social_committee_desc: "Social life of some individuals has to be regulated, we need to save our nation from degenerative agenda of the West."
 
  POL_set_state_religion: "State Religion"
  POL_set_state_religion_desc: "Christianity is a pillar of our society. It is only right if we set it as state religion."
@@ -2875,8 +2875,8 @@
  POL_political_violence_desc: "Political violence has escalated and normal way of life is but a memory."
  POL_reformed_ministry: "Reformed Foreign Affairs Ministry"
  POL_reformed_ministry_desc: "Ministry of foreign affairs has been rerouted to serve national interests."
- POL_economic_comitee_idea: "Economic Comitee"
- POL_economic_comitee_idea_desc: "The Economic Comitee oversees nationalization of industry and regulates market."
+ POL_economic_committee_idea: "Economic Committee"
+ POL_economic_committee_idea_desc: "The Economic committee oversees nationalization of industry and regulates market."
  POL_internal_network_idea: "Internal Network"
  POL_internal_network_idea_desc: "The internal network of agents and informants is securing state interests."
  POL_paramilitary_organization_idea: "Paramilitary Groups"
@@ -2902,7 +2902,7 @@
  POL_civilian_focus: "Civilian Focus"
  POL_civilian_focus_desc: "A lot is done to ensure the best and smoothest construction process at all scales."
  POL_centralized_rule_idea: "Centralized Rule"
- POL_centralized_rule_idea_desc: "Plans, ideas, orders, all comes from the centralized comitees and organizations."
+ POL_centralized_rule_idea_desc: "Plans, ideas, orders, all comes from the centralized committees and organizations."
  POL_comm_agile_control: "Agile Control"
  POL_comm_agile_control_desc: "Considerable amount of authority has been delegated on lower levels to ensure adaptability."
  POL_comm_land_reform: "Land Reform"
